# ml-engineering

./: README.md  pyproject.toml
.ipynb_checkpoints/: ml_snapshot-checkpoint.sh
artifacts/: rf_house_prices_metadata.json
data/processed/: X_features.csv
data/processed/.ipynb_checkpoints/: X_features-checkpoint.csv
notebooks/: 01_numpy_foundation.ipynb  02_pandas_house_prices.ipynb  03_sklearn_house_prices.ipynb
notebooks/.ipynb_checkpoints/: 01_numpy_foundation-checkpoint.ipynb  03_sklearn_house_prices-checkpoint.ipynb
src/: api.py  features.py
